--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,4 @@
-$font-primary: 'Space Mono', Arial, serif;
+$font-primary: 'Times New Roman', 'Space Mono', Arial, serif;
 $font-secondary: 'Kaushan Script', cursive;
 
 
