--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ h1, h2, h3, h4, h5, h6, figure {
   width: 30px;
   height: 4px;
   content: '';
+  display: none;
   background: #fff;
   margin-left: -30px;
 }
@@ -154,6 +155,7 @@ h1, h2, h3, h4, h5, h6, figure {
   width: 30px;
   height: 4px;
   content: '';
+  display: none;
   background: #fff;
   margin-right: -30px;
 }
