--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 ::selection {
   color: #fff;
-  background: #333;
+  background: #FF9000;
 }
 
 #fh5co-header,
