--- a/css/style.css
+++ b/css/style.css
@@ -530,7 +530,7 @@ h1, h2, h3, h4, h5, h6, figure {
   top: -7px;
   left: 50%;
   margin-left: -21px;
-  background-color: #FF9000;
+  background-color: #0057B8;
   z-index: 100;
   display: table;
   -webkit-border-radius: 50%;
